# rag_basic

./: .gitignore  README.md  dc_parse.py  llama_parse.py  main.py  pyproject.toml  step1.py  step2.py  step3.py  v_embed.py
data/parsed/2022-01-14-전남담양-딸기-한정식/: 2022-01-14-전남담양-딸기-한정식-with-captions.md
data/parsed/2022-01-17-전남담양-딸기-서광원/: 2022-01-17-전남담양-딸기-서광원-with-captions.md
